tests/neg/toplevel-overload/defs_2.scala
trait B

def f(x: B) = s"B"
